Improved Git For Scientists Page

--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -20,10 +20,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">There are many tools from which scientists can benefit, and Git version control is perhaps the most useful one.</p>
-          <p class="">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people who are willing to learn how to achieve a proper workflow and how to collaborate on projects.</p>
-          <p class="">Git is useful not only for developing programs but to work in teams. Learn by doing from real-world examples.</p>
-          <p>We are focussing completely on Git best practices, no programming knowledge is required for this course.</p>
+          <p class="lead">Git version control is the most useful tool from which scientists can benefit, not only for developing sotfware but also to collaborate in teams. Learn by doing from real-world examples!</p>
+          <p class="">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people that are willing to learn how to achieve a professional workflow and how to collaborate on projects.</p>
+          <p>We will focus on Git best practices, no advanced programming knowledge is required for this course.</p>
         </div>
         <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
@@ -40,7 +39,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are a big or a small team, proper use of version control makes your work more efficient and less prone to error.</p>
+          <p class="">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are in a big or small team, proper use of version control makes your work more efficient and less prone to error.</p>
           <p class="">What you are going to learn:</p>
           <ul>
             <li>Start your own Git project</li>
