Improved Python For the Lab

--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -20,9 +20,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">Git version control is the most useful tool from which scientists can benefit, not only for developing sotfware but also to collaborate in teams. Learn by doing from real-world examples!</p>
-          <p class="">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people that are willing to learn how to achieve a professional workflow and how to collaborate on projects.</p>
-          <p>We will focus on Git best practices, no advanced programming knowledge is required for this course.</p>
+          <p class="lead text-justify">Git version control is the most useful tool from which scientists can benefit, not only for developing sotfware but also to collaborate in teams. Learn by doing from real-world examples!</p>
+          <p class="text-justify">The course <em>Git for Scientists</em> is aimed at groups of up to 10 people that are willing to learn how to achieve a professional workflow and how to collaborate on projects.</p>
+          <p class="text-justify">We will focus on Git best practices, no advanced programming knowledge is required for this course.</p>
         </div>
         <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
@@ -34,12 +34,12 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h1 class="pb-2 text-left">Syllabus</h1>
-          <p class="lead text-left">Git for scientists will teach you how to exploit a tool that will help you collaborate, track your changes and document your code.</p>
+          <p class="lead text-justify">Git for scientists will teach you how to exploit a tool that will help you collaborate, track your changes and document your code.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are in a big or small team, proper use of version control makes your work more efficient and less prone to error.</p>
+          <p class="text-justify">The open source community has quickly shifted to Github to host their projects. The same technology that powers collaborations among big, decentralized teams, can be powering also your research organization. It doesn't matter if you are in a big or small team, proper use of version control makes your work more efficient and less prone to error.</p>
           <p class="">What you are going to learn:</p>
           <ul>
             <li>Start your own Git project</li>
@@ -73,8 +73,8 @@
         </div>
         <div class="col-md-6">
           <h4>What will you get</h4>
-          <p>For <b>350€</b>, Git for Scientists is the most affordable course in Amsterdam. You will learn how to work with version control, in teams, and with the most useful resources. The course is aimed at scientists, but everyone is welcome to join; contact us if you are in doubt.</p>
-          <p>The courses are two full days, from 10 am to 5 pm, and <b>lunch is included</b>. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
+          <p class="text-justify">For <b>350€</b>, Git for Scientists is the most affordable course in Amsterdam. You will learn how to work with version control, in teams, and with the most useful resources. The course is aimed at scientists, but everyone is welcome to join; contact us if you are in doubt.</p>
+          <p class="text-justify">The courses are two full days, from 10 am to 5 pm, and <b>lunch is included</b>. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
         </div>
       </div>
     </div>
