--- a/template/uetke/templates/static_pages/pythonforthelab.html
+++ b/template/uetke/templates/static_pages/pythonforthelab.html
@@ -20,10 +20,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-lg-6">
-          <p class="lead">The aim of the course is to show that anybody can build software for the lab. Our intensive 3-day course covers from the basics of communicating with a device to building user interfaces.&nbsp;</p>
-          <p class="">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from real-world cases, with real devices and measurements. The courses are aimed at small groups of up tp 7 people in
-            order to deliver personalized content to every attendant.&nbsp;</p>
-          <p class="">Do you want to have a course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
+          <p class="lead text-justify">At Python for the Lab, we aim to show that anybody can build software for the lab. In this intensive 3-day course we will cover various topics, from the basics of communicating with a device to building user interfaces. </p>
+          <p class="text-justify">Developing control software for labs with Python is becoming ubiquitous in all major research institutes around the world. Learn from examples, with real devices and measurements. The course Python for the Lab is aimed at small groups of up to 7 people, in order to deliver personalized content to every attendant. &nbsp;</p>
+          <p class="text-justify">Do you want to have a course according to the specific needs of your lab? We can work something out together, drop us a line: courses@uetke.com</p>
         </div>
         <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
@@ -41,22 +40,22 @@
         <div class="col-md-12">
           <ul class="">
             <li>Day 0 (To be done at home): &nbsp;
-              <br>You will receive detailed instructions on how to set up a development environment on your own computer. You will set up a virtual environment and install the needed libraries for the project. You will also receive instructions to set up a GitHub account, which we are going to use during the course.</li>
+              <br>You will receive detailed instructions on how to install a development environment on your own computer. You will set up a virtual environment and install the needed libraries for the project. You will also receive instructions to set up a GitHub account that you will use during the course.</li>
             <li>Day 1:
               <ul>
                 <li>Introduction to the tools we are going to use and to class dynamics</li>
-                <li> We are going to make intensive use of GitHub to review each other’s code</li>
-                <li>Quick overview of basic Python syntax and the command line to be sure everyone is on the same page</li>
-                <li>Set up an easy experiment with a LED Build the first driver for a real device</li>
+                <li>A quick overview of basic Python syntax and the command line</li>
+                <li>Set up an easy experiment with an LED</li>
+                <li>Build the first driver for a real device</li>
                 <li>Acquire an I-V curve and plot the results</li>
               </ul>
             </li>
             <li>Day 2:
               <ul>
                 <li>Learn about the MVC design pattern</li>
-                <li>Implement a Model for your driver</li>
-                <li>Implement a dummy model for testing</li>
-                <li>Develop a Model for your experiment</li>
+                <li>Implement a *model* for your driver</li>
+                <li>Implement a dummy *model* for testing</li>
+                <li>Develop a *model* for your experiment</li>
                 <li>Improve the layout of your code for better packaging</li>
                 <li>Basics of GUI developing with PyQt</li>
               </ul>
@@ -121,10 +120,10 @@
         </div>
         <div class="col-md-6">
           <h4>What will you get</h4>
-          <p>At only <b>550€</b>, Python for the Lab is the only course designed to meet your needs. You will cover a lot of ground, including first-hand experience with a real acquisition device. The course is aimed at experimental scientists; general experimental knowledge and programming skills are required.</p>
-          <p>Every participant will receive a free copy of the book <b>Python For The Lab</b>. During the length of the course, participants will also get a real acquisition device for practicing at home. For a small price, you can keep it after the course has ended.</p>
-          <p>The courses are three full days, from 10 am to 5 pm, and <b>lunch is included</b>. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
-          <p>Before the course, you will receive instruction on how to install all the software that you need. Everything we use is open source, therefore you will incur no extra costs.</p>
+          <p class="text-justify">For only 550€ Python for the Lab is the only course designed to meet your needs. You will learn about different topics, including the development of drivers and user interfaces. The course is aimed at experimental scientists; general experimental knowledge and programming skills are required.</p>
+          <p class="text-justify">Every participant will receive a free copy of the book Python For The Lab. During the length of the course, participants will also get a real acquisition device for practicing at home. For a small price, you can keep it after the course.</p>
+          <p class="text-justify">The course last three full days, from 10 am to 5 pm, and lunch is included. Please bring your own laptop; if you don't own one, let us know in advance and we can arrange something for you.</p>
+          <p class="text-justify">Before the course, you will receive instruction on how to install all the software that you will need. Everything we use is open source, therefore it will not incur extra costs.</p>
         </div>
       </div>
     </div>
