Improved the contact us layout

--- a/template/uetke/templates/static_pages/contact.html
+++ b/template/uetke/templates/static_pages/contact.html
@@ -8,7 +8,7 @@
   <div class="pt-5 bg-primary big-header" style="background-image: url('{{ SITEURL }}/theme/img/contact_header.jpg');background-position:center center;background-repeat:no-repeat;background-size:cover;">
     <div class="container mb-3 pb-3">
       <div class="row">
-        <div class="col-md-12 my-5 text-lg-left text-center align-self-center">
+        <div class="col-md-12 my-5 text-center align-self-center">
           <h1 class="display-1 text-dark main-title">Contact Us</h1>
         </div>
       </div>
