--- a/template/uetke/static/css/theme.css
+++ b/template/uetke/static/css/theme.css
@@ -165,7 +165,7 @@ code,
 kbd,
 samp {
   font-family: monospace, monospace;
-  font-size: 1em; }
+  font-size: 0.9rem; }
 
 pre {
   margin-top: 0;
@@ -445,7 +445,7 @@ kbd {
 
 pre {
   display: block;
-  font-size: 87.5%;
+  /*font-size: 87.5%;*/
   color: #212529; }
   pre code {
     font-size: inherit;
