Modifying About us page

--- a/template/uetke/templates/static_pages/about_us.html
+++ b/template/uetke/templates/static_pages/about_us.html
@@ -1,30 +1,57 @@
 {% extends "base.html" %}
 {% block title %}This is who we are{% endblock %}
-{% block description %}Uetke is a project from scientist for scientists.{% endblock %}
+{% block description %}Uetke is a project from scientists for scientists.{% endblock %}
 {% block keywords %}Physics, Science, Consulting, Programming, Coaching{% endblock %}
 
 {% block content %}
 
 <div class="container mt-5 pt-5">
   <div class="row">
-    <div class="col-md-4">
-      <h3>About Me</h3>
+    <h3>About Us</h3>
     </div>
     <div class="row">
-      <div class="col-md-4 col-md-push-7"><img src="{{ SITEURL }}/theme/img/Aquiles_Carattino.jpg" class="img-fluid"></div>
-      <div class="col-md-6" style="font-size: smaller">
-      <p class="text-justify">My name is <b>Aquiles Carattino</b>, I am a freelance software developer for research laboratories. While doing my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit, I've come to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs.</p>
-        <p class="text-justify">After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't develop any further what I was leaving behind.</p>
-        <p class="text-justify">In order to fill the knowledge gap, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
+        <div class="col-md-4 my-auto text-center">
+            <h5 class="mb-0" style="font-size: bigger">Aquiles Carattino</h5>
+          <h6 class="mb-0" style="color: gray">Scientific Software Developer</h6>
+          <h6 style="color: gray">Ph.D. in Experimental Physics, Leiden University</h6>
+          </div>
+          <div class="col-md-5">
+          <img style="width:100%" src="{{ SITEURL }}/theme/img/Aquiles_Carattino.jpg" class="img-fluid">
+        </div>
+    </div>
+      <div class="row">
+      <div class="col-md-9 ml-3">
+      <p class="mt-2 text-justify">I am a freelance software developer for research laboratories. I have a Ph.D. in experimental physics focused in single particle optics and a master degree in single molecule microscopy. I have recently completed my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit. For my Ph.D. I ... (what did you do for your PhD? what research? describe briefly here). My latest scientific publication was on .. and it was the most viewed article in?
+      You can see all my scientific publications here (add link).
+      <p class="text-justify"> While doing my Ph.D. I came to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs. After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't further develop the software I was leaving behind.</p>
+        <p class="text-justify">In order to fill the gap in knowledge, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
         <p class="text-justify">You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.</p>
       </div>
     </div>
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <p class="lead">Contact Me</p>
-        <p>I am always willing to talk about Python, programming, and science in general. If you have any ideas or just want to have a chat, the best is to drop me an e-mail to <a href="mailto:aquiles@uetke.com">aquiles@uetke.com</a>.</p>
-        <p>I am currently living in Amsterdam, The Netherlands. If you are close enough we can meet up to discuss.</p>
-        <p>You can also fill in the form below and I will get back to you as soon as possible.</p>
+      <br><hr class= "mb-0 mt-0 col-md-9 ml-2 style3"></br>
+      <div class="row">
+          <div class="col-md-5 my-auto text-center">
+              <h5 class="mb-0" style="font-size: bigger">Camila Correa</h5>
+              <h6 class="mb-0" style="color: gray">Postdoctoral researcher at Leiden University</h6>
+              <h6 style="color: gray">Ph.D. in Theoretical Astrophysics, The University of Melbourne</h6>
+          </div>
+          <div class="col-md-5">
+              <img style="width:80%" src="{{ SITEURL }}/theme/img/Camila_Correa.jpg" class="img-fluid">
+                  </div>
+      </div>
+      <div class="row">
+          <div class="col-md-9 ml-3">
+              <p class="mt-2 text-justify">I am a postdoctoral research fellow at Leiden University in the Netherlands. I focus in theoretical astrophysics, I analyse large numerical simulations to understand the formation and evolution of galaxies. I did my PhD at the University of Melbourne in Australia. For my PhD I explored the physics that drives the universal accretion history of dark matter halos, using cosmological simulations as well as analytical calculations. You can see my latest publications <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?db_key=AST&db_key=PRE&qform=AST&arxiv_sel=astro-ph&arxiv_sel=cond-mat&arxiv_sel=cs&arxiv_sel=gr-qc&arxiv_sel=hep-ex&arxiv_sel=hep-lat&arxiv_sel=hep-ph&arxiv_sel=hep-th&arxiv_sel=math&arxiv_sel=math-ph&arxiv_sel=nlin&arxiv_sel=nucl-ex&arxiv_sel=nucl-th&arxiv_sel=physics&arxiv_sel=quant-ph&arxiv_sel=q-bio&sim_query=YES&ned_query=YES&adsobj_query=YES&aut_logic=OR&obj_logic=OR&author=Correa%2C+Camila+A.%0D%0A&object=&start_mon=&start_year=&end_mon=&end_year=&ttl_logic=OR&title=&txt_logic=OR&text=&nr_to_return=200&start_nr=1&jou_pick=ALL&ref_stems=&data_and=ALL&group_and=ALL&start_entry_day=&start_entry_mon=&start_entry_year=&end_entry_day=&end_entry_mon=&end_entry_year=&min_score=&sort=SCORE&data_type=SHORT&aut_syn=YES&ttl_syn=YES&txt_syn=YES&aut_wt=1.0&obj_wt=1.0&ttl_wt=0.3&txt_wt=3.0&aut_wgt=YES&obj_wgt=YES&ttl_wgt=YES&txt_wgt=YES&ttl_sco=YES&txt_sco=YES&version=1">here</a>.</p>
+              
+              <p class="text-justify">I have joined Uetke as a scientist consultant. My efforts reside in teaching young researchers the importance of appropiate code development while working on their own research, or forming part of a large scientific collaboration.</p>
+          </div>
+      </div>
+      <br><hr class= "mb-0 mt-0 col-md-9 ml-2 style3"></br>
+    <div class="row">
+      <div class="col-md-7 ml-5">
+        <p class="lead">Contact Us</p>
+        <p class="text-justify">We are always willing to talk about Python, programming, and science in general. If you have any ideas or just want to have a chat, the best is to drop us an e-mail to <a href="mailto:aquiles@uetke.com">aquiles@uetke.com</a>.</p>
+        <p class="text-justify">We are currently living in Amsterdam, The Netherlands. If you are close enough we can meet up! You can also fill in the form below and we will get back to you as soon as possible.</p>
       </div>
     </div>
   </div>
