--- a/template/uetke/templates/static_pages/courses.html
+++ b/template/uetke/templates/static_pages/courses.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}
-{% block title %}Courses: Develop Software for the Lab{% endblock %}
+{% block title %}Courses: Learn How to Develop Software for the Lab{% endblock %}
 {% block description %}Uetke offers courses for your lab. You can develop all the skills you need to program and control your own experiment.{% endblock %}
 {% block keywords %}Courses{% endblock %}
+
+{% block og_title %}Courses: Learn How to Develop Software for the Lab{% endblock %}
+{% block og_description %}Uetke offers courses for your lab. You can develop all the skills you need to program and control your own experiment.{% endblock %}
+{% block og_url %}{{ SITEURL }}/courses/{% endblock %}
+{% block meta_content %}
+  <meta property="og:image" content="{{ SITEURL }}/theme/img/courses_header_md.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+{% endblock %}
 
 {% block content %}
 <!-- Cover -->
