--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -3,6 +3,16 @@
 {% block description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of the best version control system and how it can help you in your daily tasks.{% endblock %}
 {% block keywords %}Courses, Git, Github, Gitlab, Bitbucket{% endblock %}
 
+{% block og_title %}Git for Scientists: Learn the best tool for organizing your work{% endblock %}
+{% block og_description %}Learn how Git can help you get more organized with your work. Learn all the ins and outs of the best version control system and how it can help you in your daily tasks. {% endblock %}
+{% block og_url %}{{ SITEURL }}/courses/gitscience/{% endblock %}
+{% block meta_content %}
+  <meta property="og:image" content="{{ SITEURL }}/theme/img/python_for_the_lab_header.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+{% endblock %}
+
 {% block content %}
   <!-- Cover -->
   <div class="pt-5 bg-primary big-header" id="pythonlab-header">
