--- a/template/uetke/templates/static_pages/advancedpythonforthelab.html
+++ b/template/uetke/templates/static_pages/advancedpythonforthelab.html
@@ -1,7 +1,17 @@
 {% extends "base.html" %}
 {% block title %}Advanced Python for the Lab: The ultimate course for scientists{% endblock %}
-{% block description %}Uetke offers courses for your lab. You can develop all the skills you need to program and control your own experiment.{% endblock %}
+{% block description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for the Lab is completely customized to your needs.{% endblock %}
 {% block keywords %}Courses, Advanced, Professional{% endblock %}
+
+{% block og_title %}Advanced Python for the Lab: The ultimate course for scientists{% endblock %}
+{% block og_description %}Learn how to work with complex devices such as cameras and DAQ cards. The Advanced Python for the Lab is completely customized to your needs.{% endblock %}
+{% block og_url %}{{ SITEURL }}/courses/advanced/{% endblock %}
+{% block meta_content %}
+  <meta property="og:image" content="{{ SITEURL }}/theme/img/python_for_the_lab_header.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+{% endblock %}
 
 {% block content %}
   <!-- Cover -->
@@ -26,7 +36,7 @@
         </div>
         <dic class="col-md-4 col-lg-6 d-none d-md-block" style="background-image: url('{{ SITEURL }}/theme/img/python_for_the_lab_side.jpg');background-position:center center;background-size:cover;"></dic>
       </div>
-      <hr class="mt-0"> </div>
+    </div>
   </div>
   <!-- Features -->
   <div class="py-5" id="features">
