--- a/template/uetke/templates/static_pages/main.html
+++ b/template/uetke/templates/static_pages/main.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
 {% block title %}Software for Science{% endblock %}
-{% block description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching{% endblock %}
+{% block description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching.{% endblock %}
 {% block keywords %}Courses{% endblock %}
+
+{% block og_description %}Uetke specializes in developing software for scientific research. We also offer trainings and coaching.{% endblock %}
+{% block og_url %}{{ SITEURL }}/{% endblock %}
+{% block meta_content %}
+  <meta property="og:image" content="{{ SITEURL }}/theme/img/index_header_md.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+{% endblock %}
 
 {% block content %}
   <!-- Cover -->
